tests/local-02/out.txt
error: undefined value: x
  ┌─ err.sml:8:5
  │
8 │     x
  │     ^

typechecking failed
